plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.1'
    id 'io.spring.dependency-management' version '1.1.0'
    id "io.mateo.cxf-codegen" version "1.2.1"
}

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    cxfCodegen "jakarta.xml.ws:jakarta.xml.ws-api:4.0.0"
    cxfCodegen "jakarta.annotation:jakarta.annotation-api:2.1.1"
    implementation "jakarta.xml.ws:jakarta.xml.ws-api:4.0.0"
    implementation "jakarta.annotation:jakarta.annotation-api:2.1.1"
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'javax.xml.ws:jaxws-api:2.3.1'
    implementation 'com.sun.xml.ws:jaxws-rt:4.0.1'
    implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.kafka:spring-kafka'

    implementation 'org.apache.commons:commons-lang3:3.7'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation('io.micrometer:micrometer-spring-legacy:latest.release')
    implementation('io.micrometer:micrometer-registry-prometheus:latest.release')
}


tasks.register("bloomberg", io.mateo.cxf.codegen.wsdl2java.Wsdl2Java) {
    toolOptions {
        wsdl.set(file("${projectDir}/src/main/resources/wsdl/com/bloomberg/services/dlws/dlws.wsdl"))
        autoNameResolution.set(true)
        packageNames.set(["com.bloomberg.services.dlws"])
    }
}

cxfCodegen {
    cxfVersion = "4.0.0"
}
